# ipl2py

./: .buildinfo  .gitignore  README.md  SECURITY.md  api.html  developing.html  genindex.html  index.html  installation.html  license.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  developing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  usage.doctree
.github/workflows/: ipl2py.yml
_sources/: developing.md.txt  installation.md.txt  usage.md.txt
docs/: Makefile  api.rst  conf.py  index.rst  usage.md
src/ipl2py/: __init__.py  __main__.py  ast.py  codegen.py  compile.py  compiler.py  compiling.py  exceptions.py  grammar.py  ipl.py  parse.py  parser.py  parsing.py  symbols.py  symtable.py  transformer.py  transformers.py  tree.py  types.py  utils.py  visitor.py  visitors.py
tests/: asserts.py  conftest.py  expressions.py  test_ast.py  test_codegen.py  test_parse.py  test_parse_atoms_and_decls.py  test_parse_compound_statements.py  test_parse_expressions.py  test_parse_module.py  test_symbol_table.py  test_symtable.py
